# uvgVPCCenc

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md  README_8md.html  abstract2DMapEncoder_8hpp.html  abstract2DMapEncoder_8hpp__dep__incl.map  abstract2DMapEncoder_8hpp__dep__incl.md5  abstract2DMapEncoder_8hpp__incl.map  abstract2DMapEncoder_8hpp__incl.md5  abstract2DMapEncoder_8hpp_af47b9e73fba1d80dd578f0df1bc0f613_icgraph.map  abstract2DMapEncoder_8hpp_af47b9e73fba1d80dd578f0df1bc0f613_icgraph.md5  abstract2DMapEncoder_8hpp_source.html  annotated.html  atlas__context_8cpp.html  atlas__context_8cpp__incl.map  atlas__context_8cpp__incl.md5  atlas__context_8hpp.html  atlas__context_8hpp__dep__incl.map  atlas__context_8hpp__dep__incl.md5  atlas__context_8hpp__incl.map  atlas__context_8hpp__incl.md5  atlas__context_8hpp_source.html  atlas__frame_8hpp.html  atlas__frame_8hpp__dep__incl.map  atlas__frame_8hpp__dep__incl.md5  atlas__frame_8hpp__incl.map  atlas__frame_8hpp__incl.md5  atlas__frame_8hpp_source.html  bgFillAttribute_8cpp.html  bgFillAttribute_8cpp__incl.map  bgFillAttribute_8cpp__incl.md5  bgFillAttribute_8cpp_ab0d3290d5e51fe3166e7aaf415374f3f_icgraph.map  bgFillAttribute_8cpp_ab0d3290d5e51fe3166e7aaf415374f3f_icgraph.md5  bgFillAttribute_8hpp.html  (+2250 more)
.github/workflows/: doxygen.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  (+148 more)
src/app/: CMakeLists.txt  cli.cpp  cli.hpp  miniply.cpp  miniply.h  uvgVPCCencAppExample.cpp
src/app/dependencies/: FindDependencies.cmake
src/app/extras/: getopt.c  getopt.h  miniply.cpp
src/lib/: CMakeLists.txt  uvgvpcc.cpp  uvgvpccenc.pc.in  version.cpp.in
src/lib/bitstreamGeneration/: CMakeLists.txt  atlas_context.cpp  atlas_context.hpp  atlas_frame.hpp  bitstreamGeneration.cpp  bitstreamGeneration.hpp  bitstream_common.hpp  bitstream_util.cpp  bitstream_util.hpp  gof.cpp  gof.hpp  video_sub_bitstream.cpp  video_sub_bitstream.hpp  vps.cpp  vps.hpp
src/lib/include/uvgvpcc/: log.hpp  threadqueue.hpp  uvgvpcc.hpp  version.hpp
src/lib/mapEncoding/: CMakeLists.txt  abstract2DMapEncoder.cpp  abstract2DMapEncoder.hpp  catchLibLog.cpp  catchLibLog.hpp  encoderFFmpeg.cpp  encoderKvazaar.cpp  encoderKvazaar.hpp  encoderUvg266.cpp  encoderUvg266.hpp  mapEncoding.cpp  mapEncoding.hpp  uvg_stdio.c.in  uvg_stdio.h.in
src/lib/mapGeneration/: CMakeLists.txt  bgFillAttribute.hpp  mapGeneration.cpp  mapGeneration.hpp  mapGenerationBaseLine.cpp  mapGenerationBaseLine.hpp
src/lib/patchGeneration/: CMakeLists.txt  kdTree.cpp  kdTree.hpp  nanoflann.hpp  normalComputation.cpp  normalComputation.hpp  normalOrientation.cpp  normalOrientation.hpp  patchGeneration.cpp  patchGeneration.hpp  patchSegmentation.cpp  patchSegmentation.hpp  ppiSegmenter.cpp  ppiSegmenter.hpp  robin_hood.h  slicingComputation.cpp  slicingComputation.hpp  utilsPatchGeneration.hpp
src/lib/patchPacking/: CMakeLists.txt  patchPacking.cpp  patchPacking.hpp
src/lib/utils/: CMakeLists.txt  fileExport.cpp  fileExport.hpp  jobManagement.cpp  jobManagement.hpp  jobManagement.tpp  log.cpp  parameters.cpp  parameters.hpp  preset.cpp  preset.hpp  statsCollector.hpp  threadqueue.cpp  utils.hpp
src/libuvgutils/: CMakeLists.txt  jobManagement.cpp  log.cpp  threadqueue.cpp  version.cpp.in
src/libuvgutils/include/uvgutils/: jobManagement.hpp  jobManagement.tpp  log.hpp  threadqueue.hpp  utils.hpp  version.hpp
src/libuvgvpccenc/: CMakeLists.txt  uvgvpcc.cpp
src/libuvgvpccenc/bitstreamGeneration/: CMakeLists.txt  atlas_context.cpp  atlas_frame.hpp  bitstreamGeneration.cpp  bitstream_common.hpp  bitstream_util.hpp  gof.cpp  video_sub_bitstream.hpp  vps.cpp
src/libuvgvpccenc/include/uvgvpcc/: log.hpp  uvgvpcc.hpp
src/libuvgvpccenc/mapEncoding/: CMakeLists.txt  catchLibLog.cpp  catchLibLog.hpp  encoderFFmpeg.cpp  encoderFFmpeg.hpp  encoderKvazaar.cpp  encoderKvazaar.hpp  mapEncoding.cpp  uvg_stdio.c.in
src/libuvgvpccenc/mapGeneration/: CMakeLists.txt  bgFillAttribute.cpp  bgFillGeometry.cpp  bgFillGeometry.hpp  mapGeneration.cpp  mapGeneration.hpp
src/libuvgvpccenc/patchGeneration/: CMakeLists.txt  kdTree.cpp  normalComputation.cpp  normalComputation.hpp  normalOrientation.cpp  normalOrientation.hpp  patchGeneration.cpp  patchGeneration.hpp  patchSegmentation.cpp  patchSegmentation.hpp  ppiSegmenter.cpp  ppiSegmenter.hpp  slicingComputation.cpp  slicingComputation.hpp  slicingPpiSegmenter.cpp  slicingPpiSegmenter.hpp  utilsPatchGeneration.hpp
src/libuvgvpccenc/patchPacking/: CMakeLists.txt  patchPacking.cpp
src/libuvgvpccenc/utils/: CMakeLists.txt  commonMemory.cpp  commonMemory.hpp  constants.hpp  fileExport.cpp  fileExport.hpp  jobManagement.hpp  jobManagement.tpp  log.cpp  parameters.cpp  parameters.hpp  preset.cpp  preset.hpp  statsCollector.cpp  threadqueue.cpp  threadqueue.hpp  utils.hpp
tests/: CMakeLists.txt  ci_test.cmake  convertTestLogInListMD5.sh  ref_md5.csv  template_test.cmake
tests/long_tests/: CMakeLists.txt  generate_long_tests.cmake  ref_md5_long_tests.csv
tests/quick_tests/: CMakeLists.txt  generate_quick_tests.cmake  ref_md5_quick_tests.csv
tests/v3crtp_tests/: CMakeLists.txt  generate_v3crtp_tests.cmake
